# beebasm

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  README.org  about.txt  beebasm.1  demo.6502  demo.asm  demo.ssd  invalidbasic.6502  relocdemo.asm  relocdemo.ssd
.github/workflows/: actions.yml  create-release.yml
examples/: assertdemo.6502  autolinenumdemo.6502  basicrhstoken.bas  errorlinenumber1.6502  invalidbasic1.6502  invalidbasic2.6502  jump_table_at_end.6502  jump_table_at_end.md  local-forward-branch-2.6502  putbasicnonexistentdemo.6502  scopejumpdemo2.6502  scopejumpdemo2foo.6502  stringfunctions.6502
src/: 65Link.cpp  65Link.h  BASIC.cpp  BASIC.h  Makefile  Makefile.inc  anonymouslabels.cpp  anonymouslabels.h  asmexception.cpp  asmexception.h  assemble.cpp  basic_keywords.cpp  basic_keywords.h  basic_tokenize.cpp  basic_tokenize.h  beebasm.rc  commands.cpp  constants.h  discimage.cpp  discimage.h  expression.cpp  globaldata.cpp  globaldata.h  lineparser.cpp  lineparser.h  literals.cpp  literals.h  macro.cpp  macro.h  main.cpp  main.h  mostream.cpp  mostream.h  objectcode.cpp  objectcode.h  random.cpp  random.h  scopedsymbolname.h  sourcecode.cpp  sourcecode.h  (+9 more)
src/VS2010/: BeebAsm.sln  BeebAsm.vcxproj  BeebAsm.vcxproj.filters  build.cmd  package.cmd
test/: README.md  invalidbasic1.fail.6502  invalidbasic2.fail.6502  putbasicnonexistentdemo.fail.6502  scopejumpdemo2.6502  testrunner.py
test/1-values/: badbin1.fail.6502  badbin2.fail.6502  baddec1.fail.6502  badhex1.fail.6502  badhex2.fail.6502  cmdlinedefinebin.6502  cmdlinedefinedec.6502  (+18 more)
(+228 files in other folders)
